apps/servarr/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: servarr
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers: 
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin
        ports:
        - name: web
          containerPort: 8096
        - name: local-discovery
          containerPort: 7359
        - name: dlna
          containerPort: 1900
        volumeMounts:
        - name: jellyfin-data
          mountPath: /config
        - name: tv
          mountPath: /data/tvshows
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data-pvc
      - name: tv
        persistentVolumeClaim:
          claimName: tv
